--- a/package.json
+++ b/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "bluebirds",
+  "name": "bluesbirds-blog",
   "version": "1.0.0",
-  "description": "The official bluesbirds website and page",
-  "main": "index.js",
+  "description": "The official blog for BBGS",
+  "main": "test.js",
   "scripts": {
-    "test": "node test.js",
-    "build": "next build",
-    "start": "next start",
-    "dev": "next"
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BluesBirds-Game-Studio/BluesBirds.git"
   },
   "keywords": [
-    "Game",
-    "Studio",
-    "development"
+    "Blog",
+    "Info",
+    "announcements"
   ],
   "author": "Josias Aurel",
-  "license": "MIT",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BluesBirds-Game-Studio/BluesBirds/issues"
+  },
+  "homepage": "https://github.com/BluesBirds-Game-Studio/BluesBirds#readme",
   "dependencies": {
-    "bootstrap": "^4.5.2",
-    "next": "^9.5.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "gray-matter": "^4.0.3",
+    "marked": "^2.0.3",
+    "next": "^10.1.2",
+    "raw-loader": "^4.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "typescript": "^4.2.3"
   }
 }
